CLC-4603 - Fix issue with rosters overlapping printed pages

--- a/app/assets/stylesheets/_canvas_roster.scss
+++ b/app/assets/stylesheets/_canvas_roster.scss
@@ -4,6 +4,15 @@
   padding: 20px;
 
   @media print {
+    padding: 0;
+
+    .cc-page-roster-list {
+      li {
+        margin-top: 15px;
+        page-break-inside: avoid;
+      }
+    }
+
     .cc-roster-search {
       display: none;
     }
